--- a/style.css
+++ b/style.css
@@ -62,7 +62,12 @@ nav ul li a{
 .Home{
     flex-grow: 1;
     display: flex;
+    flex-direction: column;
+}
+.Home .home_container{
+    display: flex;
     flex-wrap: wrap;
+    flex-grow: 1;
 }
 .Home .home__text{
     padding-top: 5rem;
@@ -74,7 +79,7 @@ nav ul li a{
     letter-spacing: 1px;
 }
 .Home .home__text p{
-    margin: 1.5rem 0 2.5rem 0; 
+    margin: 1rem 0 2rem 0;
     width: 80%;
 }
 .Home .home__text a{
@@ -90,17 +95,17 @@ nav ul li a{
     justify-content: center;
 }
 .Home .home__img img{
-    height: 420px;
+    height: 450px;
 }
 /* < ================= Iphones ================== > */
 .iphones{
-    position: fixed;
-    bottom: 10px;
-    left: 50%;
-    transform: translate(-50%);
+    display: flex;
+    justify-content: center;
+    gap: .7rem;
 }
 .iphones img{
-    height: 90px;
+    height: 85px;
+    margin-bottom: 15px;
     transition: .4s;
 }
 .iphones img:hover{
@@ -109,6 +114,9 @@ nav ul li a{
 /* < ================= Breakpoints ================== > */
 /* --- xsmall device --- */
 @media screen and (width <= 576px) {
+    nav .logo img{
+        height: 60px;
+    }
     nav ul{
         backdrop-filter: blur(150px);
         position: fixed;
@@ -126,10 +134,11 @@ nav ul li a{
     }
     #menu{
         display: block;
+        width: 27px;
     }
     .Home .home__img,
     .Home .home__text{
-        padding-top: 1rem;
+        padding-top: 0rem;
         width: 100%;
     }
     .Home .home__text h1{
@@ -137,10 +146,10 @@ nav ul li a{
     }
     .Home .home__text p{
         margin: .5REM 0 2REM 0; 
+        font-size: .7REM;
         width: 100%;
     }
     .Home .home__img img{
-        margin-top: -80px;
         height: 350px;
     }
     .iphones img{
@@ -170,9 +179,6 @@ nav ul li a{
     .Home .home__img,
     .Home .home__text{
         width: 100%;
-    }
-    .Home .home__img img{
-        margin-top: -120px;
     }
 }
 /* --- meduim device --- */
